--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
-spring.datasource.password= 
+spring.datasource.password=
+server.port=8081 
 # hibernate properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
